@@ -1134,7 +1134,7 @@ namespace VDS.RDF
 
             //Default to Turtle
             contentType = MimeTypesHelper.Turtle[0];
-            IRdfWriter defaultWriter = new TurtleWriter();
+            IRdfWriter defaultWriter = new CompressingTurtleWriter();
             MimeTypesHelper.ApplyWriterOptions(defaultWriter);
             return defaultWriter;
         }
@@ -1734,7 +1734,7 @@ namespace VDS.RDF
         /// <returns></returns>
         /// <remarks>
         /// <para>
-        /// This is an alternative to using <see cref="Path.GetExtension()"/> which is designed to take into account known extensions which are used in conjunction with other extensions and mask the true extension, for example <strong>.gz</strong>
+        /// This is an alternative to using <see cref="System.IO.Path.GetExtension(String)"/> which is designed to take into account known extensions which are used in conjunction with other extensions and mask the true extension, for example <strong>.gz</strong>
         /// </para>
         /// <para>
         /// Consider the filename <strong>example.ttl.gz</strong>, obtaining the extension the standard way gives only <strong>.gz</strong> which is unhelpful since it doesn't actually tell us the underlying format of the data only that it is GZipped and if it is GZipped we almost certainly want to stream the data rather than read all into memory and heuristically detect the actual format.  Instead we'd like to get <strong>.ttl.gz</strong> as the file extension which is much more useful and this is what this function does.
