@@ -217,7 +217,7 @@ namespace VDS.RDF
         }
 
         /// <summary>
-        /// Gets/Sets whether functions that can't be parsed into Expressions should be represented by the <see cref="NullExpression">NullExpression</see>
+        /// Gets/Sets whether functions that can't be parsed into Expressions should be represented by the <see cref="VDS.RDF.Query.Expressions.Functions.UnknownFunction">UnknownFunction</see>
         /// </summary>
         /// <remarks>When set to false a Parser Error will be thrown if the Function cannot be parsed into an Expression</remarks>
         public static bool QueryAllowUnknownFunctions
@@ -331,14 +331,14 @@ namespace VDS.RDF
         }
 
         /// <summary>
-        /// Controls whether the <see cref="IndexedTripleCollection">IndexedTripleCollection</see> will create full indexes for the Triples inserted into it
+        /// Controls whether the indexed triple collections will create full indexes for the Triples inserted into it
         /// </summary>
         /// <remarks>
         /// <para>
-        /// By default the <see cref="IndexedTripleCollection">IndexedTripleCollection</see> creates indexes on Triples based upon Subjects, Predicates and Objects alone.  When full indexing is enabled it also creates indexes based on Subject-Predicate, Predicate-Object and Subject-Object pairs which may improve query speed but will use additional memory.
+        /// By default indexes triple collections creates indexes on Triples based upon Subjects, Predicates and Objects alone.  When full indexing is enabled it also creates indexes based on Subject-Predicate, Predicate-Object and Subject-Object pairs which may improve query speed but will use additional memory.
         /// </para>
         /// <para>
-        /// Default setting for Full Indexing is enabled, enabling/disabling it only has an effect on <see cref="IndexedTripleCollection">IndexedTripleCollection</see> instances instantiated after full indexing was enabled/disabled i.e. existing Graphs in memory using the <see cref="IndexedTripleCollection">IndexedTripleCollection</see> continue to use the full indexing setting that was present when they were instantiated.
+        /// Default setting for Full Indexing is enabled, enabling/disabling it only has an effect on indexed triple collection instances instantiated after full indexing was enabled/disabled i.e. existing Graphs in memory using the indexed triple collections continue to use the full indexing setting that was present when they were instantiated.
         /// </para>
         /// </remarks>
         public static bool FullTripleIndexing
