@@ -27,6 +27,7 @@ using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
+using VDS.RDF.Query;
 using VDS.RDF.Query.Expressions;
 
 namespace VDS.RDF.Nodes
