@@ -19,6 +19,7 @@ Changed
 
 Removed
 - Removed defunct TalisException
+- Removed defunct internal class InternalXmlWriter
 
 
 0.9.0 RC4
